Configure DZ thumnbnail width and height from application.yaml
[#183559454]

- Defaults are 60 and 64 for width and height respectively

--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -69,8 +69,10 @@
     // TODO: move to more global setting
     // - either coming from fragment parameter
     // - or from application properties
-    var thumbnailWidth = '64';
-    var thumbnailHeight = '60';
+    var thumbnailWidthFromAppYml = [[${@environment.getProperty('form-flow.uploads.thumbnail-width')}]];
+    var thumbnailHeightFromAppYml = [[${@environment.getProperty('form-flow.uploads.thumbnail-height')}]];
+    var thumbnailWidth = thumbnailWidthFromAppYml ? thumbnailWidthFromAppYml : '64';
+    var thumbnailHeight = thumbnailHeightFromAppYml ? thumbnailHeightFromAppYml : '60';
 
     function addDragBorder() {
       var dragAndDropBox = document.getElementById("drag-and-drop-box-" + [[${inputName}]]);
