--- a/src/main/resources/templates/fragments/form.html
+++ b/src/main/resources/templates/fragments/form.html
@@ -5,6 +5,7 @@
       th:assert="${!#strings.isEmpty(action)}, ${!#strings.isEmpty(content)}"
       th:action="@{${action}}"
       th:enctype="${enctype}"
+      th:id="${formId}"
       autocomplete="off"
       method="post">
   <th:block th:replace="${content}"/>
