--- a/src/main/resources/templates/fragments/icons.html
+++ b/src/main/resources/templates/fragments/icons.html
@@ -1651,7 +1651,7 @@
       <td>smallMoneyIcon</td>
       <td>
         <svg th:fragment="smallMoneyIcon" width="32" height="33" viewBox="0 0 32 33" fill="none"
-             xmlns="http://www.w3.org/2000/svg">
+             xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <g clip-path="url(#clip0_67_872)">
             <path
                 d="M25.3333 19.0554V8.16656C25.3333 6.66934 24.1333 5.44434 22.6666 5.44434H3.99992C2.53325 5.44434 1.33325 6.66934 1.33325 8.16656V19.0554C1.33325 20.5527 2.53325 21.7777 3.99992 21.7777H22.6666C24.1333 21.7777 25.3333 20.5527 25.3333 19.0554ZM13.3333 17.6943C11.1199 17.6943 9.33325 15.8704 9.33325 13.611C9.33325 11.3516 11.1199 9.52767 13.3333 9.52767C15.5466 9.52767 17.3333 11.3516 17.3333 13.611C17.3333 15.8704 15.5466 17.6943 13.3333 17.6943ZM30.6666 9.52767V24.4999C30.6666 25.9971 29.4666 27.2221 27.9999 27.2221H5.33325V24.4999H27.9999V9.52767H30.6666Z"
@@ -1669,8 +1669,8 @@
       <td>smallHouseIcon</td>
       <td>
         <svg th:fragment="smallHouseIcon" width="30" height="26" viewBox="0 0 30 26" fill="none"
-             xmlns="http://www.w3.org/2000/svg">
-          <path d="M12 25.2273V16.3235H18V25.2273H25.5V13.3556H30L15 0L0 13.3556H4.5V25.2273H12Z"
+             xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path d="M12 25.2273V16.3235H18V25.2273H25.5V13.355 6H30L15 0L0 13.3556H4.5V25.2273H12Z"
                 fill="black"/>
         </svg>
       </td>
@@ -1680,7 +1680,7 @@
       <td>smallPersonIcon</td>
       <td>
         <svg th:fragment="smallPersonIcon" width="25" height="26" viewBox="0 0 25 26" fill="none"
-             xmlns="http://www.w3.org/2000/svg">
+             xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <path
               d="M12.5 13.0002C15.7229 13.0002 18.3333 10.1581 18.3333 6.66683C18.3333 3.16766 15.7229 0.333496 12.5 0.333496C9.27706 0.333496 6.66665 3.16766 6.66665 6.66683C6.66665 10.1581 9.27706 13.0002 12.5 13.0002ZM12.5 16.1668C8.61352 16.1668 0.833313 18.2806 0.833313 22.5002V25.6668H24.1666V22.5002C24.1666 18.2806 16.3864 16.1668 12.5 16.1668Z"
               fill="black"/>
@@ -1690,7 +1690,8 @@
     <tr>
       <td>smallDoubleFileIcon</td>
       <td>
-        <svg th:fragment="smallDoubleFileIcon" width="14" height="18" viewBox="0 0 14 18"
+        <svg th:fragment="smallDoubleFileIcon" aria-hidden="true" width="14" height="18"
+             viewBox="0 0 14 18"
              fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
               d="M11.6858 0H3.25021C2.38533 0 1.67842 0.72073 1.67447 1.60747H1.57969C0.71086 1.60747 0 2.33225 0 3.22709V15.8804C0 16.7712 0.706911 17.5 1.57969 17.5H10.7498C11.6186 17.5 12.3216 16.7793 12.3255 15.8925H12.4203C13.2891 15.8925 14 15.1677 14 14.2729V2.36869C14 1.06085 12.9614 0 11.6858 0ZM11.2592 15.8763C11.2592 16.1638 11.0302 16.3987 10.7498 16.3987H1.57969C1.29929 16.3987 1.07024 16.1638 1.07024 15.8763V3.22304C1.07024 2.93556 1.29929 2.70072 1.57969 2.70072H8.74358V4.79408C8.74358 5.09776 8.98448 5.3407 9.27673 5.3407H11.2553V15.8763H11.2592ZM9.81382 4.24745V3.49838L10.5247 4.24745H9.81382ZM12.9298 14.2689C12.9298 14.5563 12.7007 14.7912 12.4203 14.7912H12.3255V4.79408C12.3255 4.78193 12.3216 4.77383 12.3176 4.76168C12.3137 4.71309 12.3058 4.66856 12.29 4.62402C12.286 4.60782 12.2821 4.59162 12.2742 4.57543C12.2505 4.51874 12.2149 4.46205 12.1715 4.41751L9.65585 1.77753C9.60846 1.72894 9.55712 1.69655 9.49788 1.66821C9.48209 1.66011 9.46629 1.65606 9.44654 1.64796C9.39915 1.63177 9.35176 1.61962 9.30437 1.61962C9.29252 1.61962 9.28463 1.61152 9.27278 1.61152H2.74471C2.75261 1.32809 2.97377 1.10134 3.25416 1.10134H11.6897C12.3769 1.10134 12.9337 1.67226 12.9337 2.37679V14.2689H12.9298Z"
@@ -1698,6 +1699,67 @@
           <rect x="2.1031" y="8.75" width="7.59868" height="0.921053" fill="black"/>
           <rect x="2.1031" y="12.4336" width="5.52632" height="0.921053" fill="black"/>
           <rect x="2.1031" y="10.5913" width="7.59868" height="0.921053" fill="black"/>
+        </svg>
+      </td>
+    </tr>
+    <tr>
+      <td>fileWithCheckmark</td>
+      <td>
+        <svg th:fragment="fileWithCheckmark" aria-hidden="true" width="100" height="75"
+             viewBox="14 0 100 75"
+             fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M48.8641 69.286C38.8847 68.3619 27.9231 68.872 21.4478 61.2114C14.808 53.3563 15.2571 42.1893 17.4634 32.1376C19.6976 21.9587 24.4296 12.4152 33.3401 7.03147C43.4177 0.942532 56.0019 -2.69467 66.5883 2.45622C77.1451 7.59275 80.469 20.0406 83.4453 31.4106C86.6016 43.4685 91.8711 57.7555 83.4719 66.9549C75.2633 75.9454 60.9768 70.4076 48.8641 69.286Z"
+                fill="#9BCBEB"/>
+          <path
+              d="M72.539 4.79635L32.581 4.7666C29.6063 4.7666 27.1941 7.18381 27.1941 10.1737L27.1201 62.0879C27.1127 65.0778 29.5249 67.5098 32.4996 67.5098L72.539 67.5396C75.5137 67.5396 77.926 65.1224 77.926 62.1325L77.9999 10.1737C77.9999 10.1737 77.9999 4.79635 72.539 4.79635Z"
+              fill="#FFF2FF" stroke="black" stroke-width="3" stroke-miterlimit="10"
+              stroke-linecap="round" stroke-linejoin="round"/>
+          <path
+              d="M56.1211 56.1528C56.1211 54.4719 54.8705 53.9884 53.5238 53.7207L52.8061 53.5868C51.7479 53.386 51.6665 53.0959 51.6665 52.7092C51.6665 52.2034 52.1474 51.8985 52.954 51.8985C53.9086 51.8985 54.1528 52.3522 54.2564 52.6943L54.2638 52.724C54.3822 53.0215 54.6633 53.2 55.0111 53.2C55.0999 53.2 55.1813 53.1852 55.2405 53.1777C55.6105 53.1108 55.8768 52.8282 55.8768 52.4935C55.8768 52.4117 55.8621 52.3299 55.8325 52.248C55.6401 51.6679 55.0999 50.7457 53.6126 50.5374V49.5408C53.6126 48.7078 52.2363 48.7078 52.2363 49.5408V50.5448C50.6379 50.7828 50.0459 51.8167 50.0459 52.7166C50.0459 54.3529 51.2447 54.8066 52.4213 55.0371L53.1982 55.1933C54.3007 55.409 54.4931 55.6768 54.4931 56.1751C54.4931 56.7775 53.953 57.142 53.0502 57.142C51.8811 57.142 51.6369 56.6436 51.4815 56.0784C51.3853 55.766 51.0893 55.5652 50.7267 55.5652C50.6453 55.5652 50.5861 55.5726 50.5047 55.5875L50.4826 55.5949C50.1052 55.6768 49.8535 55.9594 49.8535 56.2941C49.8535 56.361 49.8683 56.4131 49.8757 56.4577L49.8905 56.5098C50.0607 57.0527 50.4381 58.2427 52.3102 58.5105V59.5592C52.3102 59.9757 52.658 60.1914 52.9984 60.1914C53.3387 60.1914 53.6866 59.9757 53.6866 59.5592V58.5328C55.1591 58.3245 56.1211 57.4246 56.1211 56.1528Z"
+              fill="#FFF2FF"/>
+          <path d="M44.4406 31.6538H68.2566" stroke="black" stroke-width="3" stroke-miterlimit="10"
+                stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M44.4406 42.4795H68.2566" stroke="black" stroke-width="3" stroke-miterlimit="10"
+                stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M39.6879 29.6582H35.7809V33.5852H39.6879V29.6582Z" fill="#FFF2FF" stroke="black"
+                stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"
+                stroke-linejoin="round"/>
+          <path d="M39.6879 40.4834H35.7809V44.4104H39.6879V40.4834Z" fill="#FFF2FF" stroke="black"
+                stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"
+                stroke-linejoin="round"/>
+          <path d="M44.4406 20.998H68.2566" stroke="black" stroke-width="3" stroke-miterlimit="10"
+                stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M39.6879 18.8325H35.7809V22.7595H39.6879V18.8325Z" fill="#FFF2FF" stroke="black"
+                stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"
+                stroke-linejoin="round"/>
+          <path
+              d="M65.2854 9.19557L30.2462 9.16699C27.3885 9.16699 25.0711 11.4892 25.0711 14.3616L25 64.2352C24.9929 67.1076 27.3103 69.444 30.168 69.444L68.6337 69.4726C71.4914 69.4726 73.8089 67.1504 73.8089 64.2781L73.8799 17.9699L65.2854 9.19557Z"
+              fill="white"/>
+          <path d="M65.2854 17.9708L65.2854 9.19557L73.8089 17.9708H65.2854Z" fill="white"/>
+          <path
+              d="M65.2854 9.19557L30.2462 9.16699C27.3885 9.16699 25.0711 11.4892 25.0711 14.3616L25 64.2352C24.9929 67.1076 27.3103 69.444 30.168 69.444L68.6337 69.4726C71.4914 69.4726 73.8089 67.1504 73.8089 64.2781L73.8799 17.9699L65.2854 9.19557ZM65.2854 9.19557L65.2854 17.9708H73.8089L65.2854 9.19557Z"
+              stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
+              stroke-linejoin="round"/>
+          <path d="M41.6401 34.998H64.5201" stroke="black" stroke-width="3" stroke-miterlimit="10"
+                stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M33.3198 50.7607L64.5198 50.7607" stroke="black" stroke-width="3"
+                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M33.3198 43.4805L64.5198 43.4805" stroke="black" stroke-width="3"
+                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M33.3198 58.0405L64.5198 58.0405" stroke="black" stroke-width="3"
+                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M37.0733 33.0801H33.3198V36.8528H37.0733V33.0801Z" fill="#FFF5FF" stroke="black"
+                stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"
+                stroke-linejoin="round"/>
+          <path d="M41.6401 24.7607H64.5201" stroke="black" stroke-width="3" stroke-miterlimit="10"
+                stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M37.0733 22.6802H33.3198V26.4529H37.0733V22.6802Z" fill="#FFF5FF" stroke="black"
+                stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"
+                stroke-linejoin="round"/>
+          <circle cx="66" cy="57" r="15.5" fill="#EEFFE6" stroke="black" stroke-width="3"/>
+          <path d="M57.8578 57.5313L63.0777 63.3581L73.8549 52.3481" stroke="black" stroke-width="4"
+                stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
       </td>
     </tr>
