Add slab color used in privacy policy
#183741477

--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -342,6 +342,10 @@ body,
   background-color: #E9F6FF;
 }
 
+.slab--grey {
+  background-color: #F7F5F4;
+}
+
 .footer-minnesota-blue {
   color: #FFF;
   background-color: #003865;
