adds display-none class

--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -478,6 +478,10 @@ body,
   display: flex;
 }
 
+.display-none {
+  display: none;
+}
+
 .accordion__button:focus {
   outline: none;
   box-shadow: 0 0 0 5px #ffae00;
