Adds ability to hide buttons / sign up for dropzone events.

--- a/src/main/resources/templates/fragments/libraryHead.html
+++ b/src/main/resources/templates/fragments/libraryHead.html
@@ -15,5 +15,6 @@
         crossorigin="anonymous"/>
   <link rel="preload" href="/webjars/form-flow/0.0.1/js/honeycrisp.min.js" as="script">
   <script src="/webjars/form-flow/0.0.1/js/honeycrisp.min.js"></script>
+  <script src="/webjars/form-flow/0.0.1/js/formFlowDropZone.js"></script>
 </th:block>
 </html>
