--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -303,7 +303,7 @@
           if (!file.type.includes("image")) {
             setDefaultThumbnail(file);
           }
-          if (file.size / 1024 / 1024 >= 10) {
+          if (file.type.includes("image") && file.size / 1024 / 1024 >= 10) {
             setDefaultThumbnail(file)
           }
           $('#submit-my-documents-' + [[${inputName}]]).removeClass('hidden');
