Configure max file size limit for Spring from Dropzone app yaml config (#98)
* Fix bug where thumbnail generation for files larger than 10MB would break
* Update README with relevant yaml config info for max-file-size

Co-authored-by: Ben Calegari <bcalegari@codeforamerica.org>
Co-authored-by: Chibuisi Enyia <cenyia@codeforamerica.org>

--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -295,14 +295,16 @@
 
           removeLink.onclick = destroyerCreator(file);
           removeLink.innerText = [[#{general.cancel}]].toLowerCase();
-
           thumbnail.classList.add("hidden");
-
           window['isUploadComplete' + [[${inputName}]]] = false;
 
           if (!file.type.includes("image")) {
             setDefaultThumbnail(file);
           }
+          if (file.type.includes("image") && file.size / 1024 / 1024 >= 10) {
+            setDefaultThumbnail(file)
+          }
+
           $('#submit-my-documents-' + [[${inputName}]]).removeClass('hidden');
           showNumberOfAddedFiles();
           prependAddedFile();
