--- a/src/test/resources/templates/testFlow/docUpload.html
+++ b/src/test/resources/templates/testFlow/docUpload.html
@@ -1,19 +1,51 @@
 <!DOCTYPE html>
+<html th:lang="${#locale.language}">
+<head th:replace="fragments/head :: head(title='Upload Test')"></head>
+<script src="https://code.jquery.com/qunit/qunit-2.19.3.js"></script>
 <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.19.3.css">
 <body>
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
-<th:block th:replace="fragments/fileUploader :: fileUploader(inputName='uploadTest')"></th:block>
-<script src="https://code.jquery.com/qunit/qunit-2.19.3.js"></script>
-</body>
+<div class="page-wrapper">
+  <div th:replace="fragments/toolbar :: toolbar"></div>
+  <section class="slab">
+    <div class="grid">
+      <div th:replace="fragments/goBack :: goBackLink"></div>
+      <main id="content" role="main" class="form-card spacing-above-35"
+            th:with="dzFormName='doc-upload-files'">
+        <th:block
+            th:replace="'fragments/cardHeader' :: cardHeader(header='Upload Test')"/>
+        <th:block
+            th:replace="'fragments/form' :: form(action=${formAction}, enctype='multipart/form-data', content=~{::contentRef}, formId=${dzFormName})">
+          <th:block th:ref="contentRef">
+            <div class="form-card__content">
+              <th:block
+                  th:replace="fragments/fileUploader :: fileUploader(inputName=${dzFormName})"></th:block>
+            </div>
+            <div id="submit" class="form-card__footer display-none">
+              <th:block th:replace="fragments/inputs/submitButton :: submitButton(
+                text=#{general.inputs.continue})"/>
+            </div>
+          </th:block>
+        </th:block>
+      </main>
+    </div>
+  </section>
+</div>
+<th:block th:replace="fragments/footer :: footer"/>
 <script>
-    function add(a, b) {
-        return a + b;
-    }
-
-    QUnit.module('add', function() {
-        QUnit.test('two numbers', function(assert) {
-            assert.equal(add(1, 2), 3);
-        });
-    });
+  FormFlowDZ.hideContinueIfNoFiles('doc-upload-files', 'submit');
 </script>
+<script>
+  function add(a, b) {
+    return a + b;
+  }
+
+  QUnit.module('add', function () {
+    QUnit.test('two numbers', function (assert) {
+      assert.equal(add(1, 2), 3);
+    });
+  });
+</script>
+</body>
+</html>
