Update variable used for hasHelpText
[184208222]

--- a/src/main/resources/templates/fragments/inputs/radioFieldset.html
+++ b/src/main/resources/templates/fragments/inputs/radioFieldset.html
@@ -4,7 +4,7 @@
 <th:block
     th:fragment="radioFieldset"
     th:with="
-      hasHelpText=${!#strings.isEmpty(helpText)},
+      hasHelpText=${!#strings.isEmpty(fieldsetHelpText)},
       hasLabel=${!#strings.isEmpty(label)},
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
       hasError=${
