qunit works, writing tests

--- a/src/test/resources/templates/uploadFlow/docUpload.html
+++ b/src/test/resources/templates/uploadFlow/docUpload.html
@@ -6,7 +6,7 @@
 <body>
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
-<div class="page-wrapper">
+<div class="page-wrapper" id="uploadTest">
   <div th:replace="fragments/toolbar :: toolbar"></div>
   <section class="slab">
     <div class="grid">
@@ -32,23 +32,50 @@
     </div>
   </section>
 </div>
-<th:block th:replace="fragments/footer :: footer"/>
 <script>
-  FormFlowDZ.hideContinueIfNoFiles('doc-upload-files', 'submit');
+  FormFlowDZ.hideContinueIfNoFiles('uploadTest', 'submit');
 </script>
 <script>
-  function add(a, b) {
-    return a + b;
-  }
+  QUnit.module('Dropzone', function () {
+    const dzInstance = window['myDropZoneuploadTest'];
 
-  QUnit.module('add', function () {
-    QUnit.test('two numbers', function (assert) {
-      assert.equal(add(1, 2), 3);
+    QUnit.testStart(function () {
+      dzInstance.removeAllFiles();
     });
-    QUnit.test('dropzone loads', function (assert) {
-      assert.equal(window['myDropzoneuploadTest'].options.acceptedFiles,
+
+    QUnit.test('loads accepted files from application.yaml', function (assert) {
+      assert.equal(dzInstance.options.acceptedFiles,
           ".jpeg,.jpg,.png,.pdf,.bmp,.gif,.doc,.docx,.odt,.ods,.odp");
     });
+
+    QUnit.test('deleting an upload file removes it from the page', function (assert) {
+      // Upload a file
+      const file = new File([""], "test.pdf", {type: "application/pdf"});
+      dzInstance.addFile(file);
+
+      // Wait for file to upload
+      dzInstance.on("success", function () {
+        // Check file is on page
+        assert.equal(document.querySelectorAll('.dz-preview').length, 1);
+      });
+
+      // Delete file
+      document.querySelector('.dz-remove').click();
+      // Check file is no longer on page
+      assert.equal(document.querySelectorAll('.dz-preview').length, 0);
+      // Assert the dzInstance has no files
+      assert.equal(dzInstance.files.length, 0);
+
+      // // Click the delete button
+      // $.findElementById('uploadTest').findElementByClassName('dz-remove').click();
+      //
+      // // Assert that the file is no longer on the page
+      // assert.equal($.findElementById('uploadTest').findElementsByClassName('dz-preview').length, 0);
+    });
+  });
+
+  QUnit.testDone(function(){
+    document.querySelector("#uploadTest").className += " display-none";
   });
 </script>
 </body>
