--- a/src/test/resources/templates/uploadFlow/docUploadUnit.html
+++ b/src/test/resources/templates/uploadFlow/docUploadUnit.html
@@ -4,7 +4,8 @@
 <script src="https://code.jquery.com/qunit/qunit-2.19.3.js"></script>
 <script src="/webjars/form-flow/0.0.1/js/qunit-upload-tests.js"></script>
 <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.19.3.css">
-<body>
+<body
+    th:with="dzFormName='uploadTest'">
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 <div class="page-wrapper" id="uploadTest">
@@ -12,8 +13,7 @@
   <section class="slab">
     <div class="grid">
       <div th:replace="fragments/goBack :: goBackLink"></div>
-      <main id="content" role="main" class="form-card spacing-above-35"
-            th:with="dzFormName='uploadTest'">
+      <main id="content" role="main" class="form-card spacing-above-35">
         <th:block
             th:replace="'fragments/cardHeader' :: cardHeader(header='Upload Test')"/>
         <th:block
@@ -34,7 +34,7 @@
   </section>
 </div>
 <script>
-  FormFlowDZ.hideContinueIfNoFiles('uploadTest', 'submit');
+  FormFlowDZ.hideContinueIfNoFiles('[[${dzFormName}]]', 'submit');
 </script>
 </body>
 </html>
