--- a/src/main/resources/templates/fragments/inputs/yesOrNo.html
+++ b/src/main/resources/templates/fragments/inputs/yesOrNo.html
@@ -2,11 +2,11 @@
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <body>
 <th:block
-    th:fragment="yesOrNo"
+    th:fragment="yesOrNo(inputName, ariaDescribe)"
     th:with="
       hasHelpText=${!#strings.isEmpty(helpText)},
       hasAriaDescribe=${!#strings.isEmpty(ariaDescribe)}"
-    th:assert="${!#strings.isEmpty(inputName)}, ${hasHelpText || hasAriaDescribe}">
+    th:assert="${!#strings.isEmpty(inputName)}, ${hasAriaDescribe}">
   <div th:if="${hasHelpText}">
     <p th:id="${inputName + '-help-text'}"
        th:text="${helpText}"
