--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -217,7 +217,7 @@
     function sendDeleteXhrRequest(id) {
       var xhrRequest = new XMLHttpRequest();
       xhrRequest.open('POST',
-          '/file-delete?returnPath=' + window.location.pathname + '&inputName='
+          '/file-delete?' + id + '&returnPath=' + window.location.pathname + '&inputName='
           + [[${inputName}]], true);
       xhrRequest.withCredentials = false;
       xhrRequest.setRequestHeader("Accept", "*/*");
@@ -341,7 +341,8 @@
           toggleMaxFileMessage('on');
         });
 
-        this.on('success', function (file, id) {
+        this.on('success', function (file, id, e) {
+          console.log("error is " + e);
           var removeLink = file.previewElement.getElementsByClassName("dz-remove")[0];
           var thumbnail = file.previewElement.getElementsByClassName("dz-thumb")[0];
           var progressBar = file.previewElement.getElementsByClassName("dz-progress")[0];
