Added Icon for the Submitting UBI page #184330677

--- a/src/main/resources/templates/fragments/icons.html
+++ b/src/main/resources/templates/fragments/icons.html
@@ -1840,6 +1840,49 @@
         </svg>
       </td>
     </tr>
+    <tr>
+      <td>clipboardWithEnvelope</td>
+      <td>
+        <svg th:fragment="clipboardWithEnvelope" aria-hidden="true" width="100" height="75"
+             viewBox="0 0 100 75" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M31.7903 68.5636C25.6328 65.5239 18.8046 62.8861 15.236 57.0167C11.5774 50.9991 11.7464 43.5404 12.3045 36.5141C12.8699 29.3947 13.9287 21.9642 18.4587 16.4407C22.9519 10.962 30.0411 8.67831 36.8178 6.62433C43.3713 4.638 50.2714 2.94211 56.8569 4.80237C63.3329 6.63166 68.3052 11.58 72.6264 16.7393C76.7393 21.6498 79.3154 27.4265 80.988 33.6133C82.7726 40.2142 84.7862 47.1658 82.6057 53.6515C80.3788 60.2755 74.9793 65.3811 69.0602 69.0926C63.354 72.6706 56.6564 74.2377 49.9271 74.1422C43.4701 74.0505 37.5788 71.4211 31.7903 68.5636Z"
+                fill="#7AC943"/>
+          <path d="M58.5637 7.62012H9V65.4279H58.5637V7.62012Z" fill="white" stroke="black"
+                stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
+                stroke-linejoin="round"/>
+          <path
+              d="M49.2942 59.4781H18.1056C16.1448 59.4781 14.5547 57.8948 14.5547 55.9423V14.152C14.5547 12.1995 16.1448 10.6162 18.1056 10.6162H49.3298C51.2693 10.6162 52.8451 12.1853 52.8451 14.1165V19.3349V55.9352C52.8451 57.8948 51.2551 59.4781 49.2942 59.4781Z"
+              fill="white" stroke="black" stroke-width="3" stroke-miterlimit="10"
+              stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M20.4657 42.417H46.941" stroke="black" stroke-width="3" stroke-miterlimit="10"
+                stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M20.4657 36.1123H46.941" stroke="black" stroke-width="3" stroke-miterlimit="10"
+                stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M20.4657 48.6221H46.941" stroke="black" stroke-width="3" stroke-miterlimit="10"
+                stroke-linecap="round" stroke-linejoin="round"/>
+          <path
+              d="M33.7854 24.8093C32.0313 24.8093 30.6123 26.2222 30.6123 27.9688V30.1413H36.9584V27.9688C36.9513 26.2222 35.5323 24.8093 33.7854 24.8093Z"
+              fill="#D8F2F2"/>
+          <path
+              d="M33.7854 24.8093C35.1164 24.8093 36.1954 23.7349 36.1954 22.4095C36.1954 21.0842 35.1164 20.0098 33.7854 20.0098C32.4543 20.0098 31.3753 21.0842 31.3753 22.4095C31.3753 23.7349 32.4543 24.8093 33.7854 24.8093Z"
+              fill="#D8F2F2"/>
+          <path
+              d="M33.7854 24.8093C32.0313 24.8093 30.6123 26.2222 30.6123 27.9688V30.1413H36.9584V27.9688C36.9513 26.2222 35.5323 24.8093 33.7854 24.8093ZM33.7854 24.8093C35.1164 24.8093 36.1954 23.7349 36.1954 22.4095C36.1954 21.0842 35.1164 20.0098 33.7854 20.0098C32.4543 20.0098 31.3753 21.0842 31.3753 22.4095C31.3753 23.7349 32.4543 24.8093 33.7854 24.8093Z"
+              stroke="black" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"
+              stroke-linejoin="round"/>
+          <path
+              d="M43.711 12.7815H23.8528V11.0634C23.8528 7.71218 26.5766 5 29.9422 5H37.6288C40.9944 5 43.7182 7.71218 43.7182 11.0634V12.7815H43.711Z"
+              fill="#D8F2F2" stroke="black" stroke-width="3" stroke-miterlimit="10"
+              stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M38.0327 46L38 70.9107L83.9673 71L84 46.0893L38.0327 46Z" fill="#FFF7E3"
+                stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"
+                stroke-linejoin="round"/>
+          <path d="M38.5 47.5L62 58.5L83.5 47.5" stroke="black" stroke-width="3"
+                stroke-linejoin="round"/>
+        </svg>
+      </td>
+    </tr>
     </tbody>
   </table>
 </article>
