--- a/src/test/resources/templates/testFlow/last.html
+++ b/src/test/resources/templates/testFlow/last.html
@@ -6,6 +6,7 @@
   <div th:replace="fragments/toolbar :: toolbar"></div>
   <section class="slab">
     <div class="grid">
+      <div th:replace="fragments/goBack :: goBackLink"></div>
       <main id="content" role="main" class="form-card spacing-above-35">
         <th:block
             th:replace="'fragments/cardHeader' :: cardHeader(header='Last Page', subtext='This is the last page!')"/>
