--- a/src/test/resources/templates/testFlow/pageWithOptionalValidation.html
+++ b/src/test/resources/templates/testFlow/pageWithOptionalValidation.html
@@ -9,7 +9,7 @@
       <main id="content" role="main" class="form-card spacing-above-35">
         <th:block
             th:replace="'fragments/cardHeader' :: cardHeader(header='Page with optional validation')"/>
-        <th:block th:replace="'fragments/form' :: form(action='/testFlow/pageWithOptionalValidation', content=~{::formContent})">
+        <th:block th:replace="'fragments/form' :: form(action=${formAction}, content=~{::formContent})">
           <th:block th:ref="formContent">
             <div class="form-card__content">
               <th:block th:replace="'fragments/inputs/number' ::
