Add state fragment
- Default message properties for states

[#184247237]

Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>

--- a/src/test/resources/templates/testFlow/inputs.html
+++ b/src/test/resources/templates/testFlow/inputs.html
@@ -80,6 +80,10 @@
                   th:replace="'fragments/inputs/ssn' :: ssn(
                             inputName='ssnInput',
                             label='ssnInput')"/>
+              <th:block th:replace="'fragments/inputs/state' ::
+                          state(inputName='stateInput',
+                          label='stateInput',
+                          placeholderText='State')"/>
             </div>
             <div class="form-card__footer">
               <th:block th:replace="'fragments/continueButton' :: continue"/>
