Update error message properties
Co-authored-by: Lauren Kemperman <lkemperman@codeforamerica.org>

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -10,7 +10,7 @@
       <main id="content" role="main" class="form-card spacing-above-35">
         <th:block th:replace="'fragments/icons' :: error"></th:block>
         <th:block
-            th:replace="'fragments/cardHeader' :: cardHeader(header=#{error.uh-oh}, subtext=#{error.its-not-you-description})"/>
+            th:replace="'fragments/cardHeader' :: cardHeader(header=#{error.uh-oh}, subtext=#{error.we-are-sorry})"/>
       </main>
     </div>
   </section>
