DO NOT MERGE (yet): Changes file id to UUID versus just an int (#96)
* Changes file id to UUID versus just an int
* Takes out debug stuff
* Fixes tests based on code changes.
* Some cleanup.
* Tries to be more generic
* First pass at getting tests to pass with H2.  Needs to be
reorganized.
* Fixes some UUID issues
* More changes
* Clean up whitespace
* Move application properties into groups

Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>
Co-authored-by: lkemperman-cfa <lkemperman@codeforamerica.org>

--- a/src/main/resources/templates/fragments/fileUploader.html
+++ b/src/main/resources/templates/fragments/fileUploader.html
@@ -341,7 +341,8 @@
           toggleMaxFileMessage('on');
         });
 
-        this.on('success', function (file, id) {
+        this.on('success', function (file, id, e) {
+          console.log("error is " + e);
           var removeLink = file.previewElement.getElementsByClassName("dz-remove")[0];
           var thumbnail = file.previewElement.getElementsByClassName("dz-thumb")[0];
           var progressBar = file.previewElement.getElementsByClassName("dz-progress")[0];
@@ -388,7 +389,7 @@
               name: doc.originalFilename,
               size: doc.filesize,
               type: doc.type,
-              id: parseInt(uploadedDocWithThumbnail[0]),
+              id: uploadedDocWithThumbnail[0],
               accepted: true
             };
             window[dropzonePrefix + [[${inputName}]]].files.push(mockFile);
