--- a/src/main/resources/templates/fragments/inputs/number.html
+++ b/src/main/resources/templates/fragments/inputs/number.html
@@ -5,6 +5,8 @@
     th:fragment="number"
     th:with="
       hasHelpText=${!#strings.isEmpty(helpText)},
+      hasTitle=${!#strings.isEmpty(title)},
+      hasPattern=${!#strings.isEmpty(pattern)},
       hasLabel=${!#strings.isEmpty(label)},
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
       hasError=${
@@ -18,11 +20,14 @@
        th:if="${hasHelpText}"
        th:id="${inputName + '-help-text'}"
        th:text="${helpText}"></p>
-    <input type="number" class="text-input form-width--med"
+    <input type="text" inputmode="numeric"
+           class="text-input form-width--med"
            th:id="${inputName}"
            th:name="${inputName}"
            th:placeholder="${placeholder}"
            th:attr="
+            title=${hasTitle ? title : #messages.msg('general.inputs.number')},
+            pattern=${hasPattern ? pattern : '^\d*(\.\d{0,2})?$'},
             aria-describedby=${hasHelpText ? inputName + '-help-text' : ''},
             aria-labelledby=${hasAriaLabel ? ariaLabel : ''},
             aria-invalid=${hasError}"
