WIP - start up the cleaning process
- go away from address[][] pattern
- simplify test to just one address for now
- move away from nested class/Hashmap approach in inputs class

Co-authored-by: Chibuisi Enyia <cenyia@codeforamerica.org>

--- a/src/test/resources/templates/testFlow/address.html
+++ b/src/test/resources/templates/testFlow/address.html
@@ -1,17 +1,8 @@
 <th:block th:replace="'fragments/form' :: form(action=${formAction}, content=~{::testAddress})">
-  <th:block th:ref="testValidatedAddress">
+  <th:block th:ref="testAddress">
     <div class="form-card__content">
-      <th:block th:replace="'fragments/inputs/address' :: address(validate=true, inputName='residentialAddress')"/>
+      <th:block
+          th:replace="'fragments/inputs/address' :: address(validate=true, inputName='address')"/>
     </div>
   </th:block>
-  <th:block th:ref="testUnvalidatedAddress">
-    <div class="form-card__content">
-      <th:block th:replace="'fragments/inputs/address' :: address(validate=false, inputName='residentialAddress')"/>
-    </div>
-  </th:block>
-  <th:block th:ref="testSmartyValidatedAddress">
-    <div class="form-card__content">
-      <th:block th:replace="'fragments/display/validatedAddress' :: validatedAddress(nameOfAddressFieldThatWasValidated='residentialAddress')"/>
-    </div>
-  </th:block>
- </th:block>
+</th:block>
