--- a/src/main/resources/templates/fragments/inputs/address.html
+++ b/src/main/resources/templates/fragments/inputs/address.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <body>
- <th:block
-   th:fragment="address(validate, inputName)"
-   th:with="validateAddress=${validate ? validate : true}"
- >
+<th:block
+    th:fragment="address(validate, inputName)"
+    th:with="validateAddress=${validate ? validate : true}"
+>
   <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName=${'address[' + inputName + '][streetAddress1]'},
-                  label=#{homeAddress.streetAddress})" />
+                  text(inputName=${inputName + 'StreetAddress1'},
+                  label='Address 1')"/>
   <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName=${'address[' + inputName + '][streetAddress2]'},
-                  label=#{homeAddress.apartment})" />
+                  text(inputName=${inputName + 'StreetAddress2'},
+                  label='Address 2')"/>
   <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName=${'address[' + inputName + '][city]'},
-                  label=#{homeAddress.city})" />
+                  text(inputName=${inputName + 'City'},
+                  label='City')"/>
+  <th:block th:replace="'fragments/inputs/state' ::
+                  state(inputName=${inputName + 'State'},
+                  label='State')"/>
   <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName='state',
-                  label=#{homeAddress.state})" />
-  <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName='zip',
-                  label=#{homeAddress.zip})" />
- </th:block>
+                  text(inputName=${inputName + 'Zip'},
+                  label='Zip')"/>
+</th:block>
 </body>
 </html>
